fix: set output card scrollable when the content overflow

--- a/frontend/src/components/Output/Output.scss
+++ b/frontend/src/components/Output/Output.scss
@@ -12,6 +12,8 @@
     justify-content: center;
 }
 .card {
+    max-height: 80%;
+    overflow: scroll;
     padding: 60px;
     border-radius: 40px;
     min-width: 90%;
